fix: Fix navbar spacing

--- a/frontend/app/navbar/main_navbar.module.css
+++ b/frontend/app/navbar/main_navbar.module.css
@@ -1,6 +1,3 @@
-.container {
-  height: rem(60px);
-  padding-left: var(--mantine-spacing-md);
-  padding-right: var(--mantine-spacing-md);
-  border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+.flex_container {
+  border-bottom: 1px solid lightgray;
 }
