--- a/frontend/app/navbar/second_navbar.module.css
+++ b/frontend/app/navbar/second_navbar.module.css
@@ -1,3 +1,3 @@
-.container {
-  border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+.flex_container {
+  border-bottom: 1px solid lightgray
 }
